@@ -107,13 +107,13 @@ public:
   // = Singleton reactor event loop management methods.
 
   // Note that these method ONLY work on the "Singleton Reactor,"
-  // i.e., the one returned from <ACE_Reactor::instance>.
+  // i.e., the one returned from ACE_Reactor::instance().
   /**
    * Run the event loop until the
    * <ACE_Reactor::handle_events/ACE_Reactor::alertable_handle_events>
-   * method returns -1 or the <end_event_loop> method is invoked.
+   * method returns -1 or the end_event_loop() method is invoked.
    * Note that this method can only be used by the singleton
-   * <ACE_Reactor::instance>.  Thus, to run another reactor use
+   * ACE_Reactor::instance().  Thus, to run another reactor use
    * <ACE_Reactor::run_reactor_event_loop>.
    *
    * @deprecated Use ACE_Reactor::instance()->run_reactor_event_loop() instead
@@ -122,11 +122,11 @@ public:
   static int run_alertable_event_loop (void);
 
   /**
-   * Run the event loop until the <ACE_Reactor::handle_events> or
+   * Run the event loop until the ACE_Reactor::handle_events() or
    * <ACE_Reactor::alertable_handle_events> methods returns -1, the
-   * <end_event_loop> method is invoked, or the ACE_Time_Value
+   * end_event_loop() method is invoked, or the ACE_Time_Value
    * expires.  Note that this method can only be used by the singleton
-   * <ACE_Reactor::instance>.  Thus, to run another reactor use
+   * ACE_Reactor::instance().  Thus, to run another reactor use
    * <ACE_Reactor::run_reactor_event_loop>.
    *
    * @deprecated Use ACE_Reactor::instance()->run_reactor_event_loop() instead
@@ -135,10 +135,10 @@ public:
   static int run_alertable_event_loop (ACE_Time_Value &tv);
 
   /**
-   * Instruct the <ACE_Reactor::instance> to terminate its event loop
-   * and notifies the <ACE_Reactor::instance> so that it can wake up
+   * Instruct the ACE_Reactor::instance() to terminate its event loop
+   * and notifies the ACE_Reactor::instance() so that it can wake up
    * and close down gracefully.  Note that this method can only be
-   * used by the singleton <ACE_Reactor::instance>.  Thus, to
+   * used by the singleton ACE_Reactor::instance().  Thus, to
    * terminate another reactor, use
    * <ACE_Reactor::end_reactor_event_loop>.
    *
@@ -147,9 +147,9 @@ public:
   static int end_event_loop (void);
 
   /**
-   * Report if the <ACE_Reactor::instance>'s event loop is finished.
+   * Report if the ACE_Reactor::instance()'s event loop is finished.
    * Note that this method can only be used by the singleton
-   * <ACE_Reactor::instance>.  Thus, to check another reactor use
+   * ACE_Reactor::instance().  Thus, to check another reactor use
    * <ACE_Reactor::reactor_event_loop_done>.
    *
    * @deprecated Use ACE_Reactor::instance()->reactor_event_loop_done() instead
@@ -157,10 +157,10 @@ public:
   static int event_loop_done (void);
 
   /**
-   * Resets the <ACE_Reactor::end_event_loop_> static so that the
-   * <run_event_loop> method can be restarted.  Note that this method
-   * can only be used by the singleton <ACE_Reactor::instance>.  Thus,
-   * to reset another reactor use <ACE_Reactor::reset_reactor_event_loop>.
+   * Resets the ACE_Reactor::end_event_loop_  static so that the
+   * run_event_loop() method can be restarted.  Note that this method
+   * can only be used by the singleton ACE_Reactor::instance().  Thus,
+   * to reset another reactor use ACE_Reactor::reset_reactor_event_loop().
    *
    * @deprecated Use ACE_Reactor::instance()->reset_reactor_event_loop()
    * instead
@@ -179,16 +179,16 @@ public:
   // These methods work with an instance of a reactor.
   /**
    * Run the event loop until the
-   * <ACE_Reactor::handle_events/ACE_Reactor::alertable_handle_events>
-   * method returns -1 or the <end_reactor_event_loop> method is invoked.
+   * ACE_Reactor::handle_events()/ACE_Reactor::alertable_handle_events()
+   * method returns -1 or the end_reactor_event_loop() method is invoked.
    */
   int run_reactor_event_loop (REACTOR_EVENT_HOOK = 0);
   int run_alertable_reactor_event_loop (REACTOR_EVENT_HOOK = 0);
 
   /**
-   * Run the event loop until the <ACE_Reactor::handle_events> or
+   * Run the event loop until the ACE_Reactor::handle_events() or
    * <ACE_Reactor::alertable_handle_events> methods returns -1, the
-   * <end_reactor_event_loop> method is invoked, or the ACE_Time_Value
+   * end_reactor_event_loop() method is invoked, or the ACE_Time_Value
    * expires.
    */
   int run_reactor_event_loop (ACE_Time_Value &tv,
@@ -212,8 +212,8 @@ public:
   /// Indicate if the Reactor's event loop has been ended.
   int reactor_event_loop_done (void);
 
-  /// Resets the <ACE_Reactor::end_event_loop_> static so that the
-  /// <run_event_loop> method can be restarted.
+  /// Resets the ACE_Reactor::end_event_loop_ static so that the
+  /// run_event_loop() method can be restarted.
   void reset_reactor_event_loop (void);
 
   /**
@@ -232,8 +232,8 @@ public:
   virtual ~ACE_Reactor (void);
 
   /**
-   * Initialize the ACE_Reactor to manage <max_number_of_handles>.
-   * If @a restart is false then the ACE_Reactor's <handle_events>
+   * Initialize the ACE_Reactor to manage @a max_number_of_handles.
+   * If @a restart is false then the ACE_Reactor's handle_events()
    * method will be restarted automatically when <EINTR> occurs.  If
    * @a signal_handler or @a timer_queue are non-0 they are used as the
    * signal handler and timer queue, respectively.
